k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tradevision
  labels:
    app.kubernetes.io/part-of: tradevision
